--- a/java-grupo/pom.xml
+++ b/java-grupo/pom.xml
@@ -58,6 +58,12 @@
             <version>8.1.0</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.microsoft.sqlserver</groupId>-->
+<!--            <artifactId>mssql-jdbc</artifactId>-->
+<!--            <version>9.4.0.jre8</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>com.github.britooo</groupId>
             <artifactId>looca-api</artifactId>
